[package]
name = "servo-media-gstreamer"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]

[dependencies]
byte-slice-cast = "0.1"
glib = "0.5"
gstreamer = "0.11"
gstreamer-app = "0.11"
gstreamer-audio = "0.11"
gstreamer-player = "0.11"
ipc-channel = "0.9"
num-traits = "0.1"
servo-media-audio = { path = "../../audio" }
servo-media-player = {  path = "../../player" }

[build-dependencies]
regex = "1.0"
zip = "0.3.1"
